--- a/docs/arc42/arc42.adoc
+++ b/docs/arc42/arc42.adoc
@@ -1,10 +1,13 @@
-= Architektur-Dokumentation: Digitalisierungsassistent
+= Architecture-Documentation: PaperPilot
 
 include::01_introduction_and_goals.adoc[]
 include::02_architecture_constraints.adoc[]
 include::03_system_scope_and_context.adoc[]
 include::04_solution_strategy.adoc[]
 include::05_building_block_view.adoc[]
+include::06_runtime_view.adoc[]
+include::07_deployment_view.adoc[]
+include::08_concepts.adoc[]
 include::09_architecture_decisions.adoc[]
 include::10_quality_requirements.adoc[]
 include::11_risks_and_technical_debt.adoc[]
